# c-paper-terminal

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Structs.h  Utils.h  main.cpp
src/screens/: CMakeLists.txt  Screen.h
src/screens/VirtualScreen/: BufferIterator.cpp  BufferIterator.h  VirtualScreen.cpp  VirtualScreen.h
tests/: CMakeLists.txt
tests/screens/VirtualScreens/: test_BufferIterator.cpp
